--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <header><h1>OregonTail</h1></header>
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
